--- a/form.html
+++ b/form.html
@@ -24,14 +24,14 @@
         </div>
     </nav>
     <div class="container mt-5">
-        <form action="script.js" method="get">
+        <form action="confirm.html" method="get" id="user_form">
         <div class="row">
             <div class="form-inline" action="script.js" method="get">
                 <div class="input-group">
                     <div class="form-group col-md-6">
                         <label for="email">Endereço de Email</label>
-                        <input type="email" class="form-control" id="InputEmail1" aria-describedby="email"
-                            placeholder="Enter email" required />
+                        <input type="email" class="form-control" id="email" aria-describedby="email"
+                            placeholder="Enter email" name="email"required />
                         <small id="security" class="form-text text-muted">Nós nunca vamos compartilhar seus dados com
                             ninguém
                         </small>
@@ -69,8 +69,8 @@
 
                         </div>
                         <div class="form-group " style="margin-left: 30px; width: 220px;">
-                            <label for="localidade" name="localidade">Cidade </label>
-                            <input type="text" name="localidade" id="localidade" class="form-control col-md-4" disabled="disabled"
+                            <label for="numero" name="numero">Número:  </label>
+                            <input type="text" name="nuemro" id="numero" class="form-control col-md-4"
                                />
                         </div>
                         <div class="form-group" style="margin-left: 30px;">
@@ -88,12 +88,12 @@
                             <input type="text" name="logradouro" id="logradouro" class="form-control"
                             disabled="disabled" />
                         </div>
-                        <div class="form-group" style="margin-left: 30px;">
-                            <label for="numero">Número: </label>
-                            <input type="text" name="numero" id="numero"  class="form-control" />
-
+                        <div class="form-group " style="margin-left: 30px; width: 220px;">
+                            <label for="localidade" name="localidade">Cidade </label>
+                            <input type="text" name="localidade" id="localidade" class="form-control col-md-4" disabled="disabled"
+                               />
                         </div>
-                        <div class="form-group" style="margin-left: 40px;">
+                        <div class="form-group" style="margin-left: 30px;">
                             <label for="bairro" name="bairro">Bairro </label>
                             <input
                               type="text"
@@ -126,9 +126,9 @@
                         nossos termos de serviço
                     </small>
                 </div>
-                <button type="submit" id="submit" class="btn btn-primary mt-3 mb-3" style="width: 10%;" onclick="send()">
+                <a href="confirm.html"><button type="submit" id="submit" class="btn btn-primary mt-3 mb-3" style="width: 10%;">
                     Enviar
-                </button>
+                </button></a>
             </div>
         </div>
     </div>
