--- a/confirm.html
+++ b/confirm.html
@@ -37,20 +37,22 @@
             <h1 class="h1">Confirme os seus dados abaixo: </h1>
             <div id="formResult md-6">
                 <table class="table" aria-label="formResult">
-                    <tr id="valores">
-                        <th id="nome">Nome</th>
-                        <th id="email">Email</th>
-                        <th id="cpf">CPF</th>
-                        <th id="nascimento">Data de Nascimento</th>
-                        <th id="cep">Cep</th>
-                        <th id="cidade">Cidade</th>
-                        <th id="bairro">Bairro</th>
-                        <th id="cep">Logradouro</th>
-                        <th id="estado">Estado</th>
-                        <th id="numero">Numero</th>
-
-
-                    </tr>
+                    <thead>
+                        <tr id="valores">
+                            <th id="nome">Nome</th>
+                            <th id="email">Email</th>
+                            <th id="cpf">CPF</th>
+                            <th id="nascimento">Data de Nascimento</th>
+                            <th id="cep">Cep</th>
+                            <th id="cidade">Cidade</th>
+                            <th id="bairro">Bairro</th>
+                            <th id="cep">Logradouro</th>
+                            <th id="estado">Estado</th>
+                            <th id="numero">Numero</th>
+                        </tr>
+                        
+                    </thead>
+                    
                     <tr>
                         <td></td>
                         <td></td>
