--- a/form.html
+++ b/form.html
@@ -167,7 +167,7 @@
                 </div>
 
 <!-- Button1 -->
-                <a href=""><button type="submit" id="submit" class="btn btn-outline-success mt-3 mb-3 submit-btn"
+                <a href="./greetings.html"><button type="button" id="submit" class="btn btn-outline-success mt-3 mb-3 submit-btn"
                         style="width: 10%;">
                         Enviar
                     </button></a>
